# spiht

./: .gitignore  Cargo.toml  README.md  demonstrate.py  encode_decode.py  make_gif.py  pyproject.toml  requirements.txt  util.py
spiht/: __init__.py  color_models.py  color_spaces.py  quantize.py  spiht_py.py  spiht_wrapper.py  utils.py
spiht-rs/: Cargo.toml
spiht-rs/src/: lib.rs  spiht.rs
spiht/tests/: test_rust.py  test_spiht.py
spiht_py/: spiht.py  spiht_wrapper.py  test_rust.py  tests.py  utils.py
spiht_py/tests/: main.py  test_spiht.py
src/: encoder_decoder.rs  encoder_decoder_with_metadata.rs  lib.rs
tests/: encoder.py
